--- a/day02/rag_langchain.ipynb
+++ b/day02/rag_langchain.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -331,18 +331,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
-      "/Users/jay-now/dev/ai-advanced/.venv/lib/python3.13/site-packages/langsmith/client.py:277: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n"
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"Task decomposition is the process of breaking down complicated tasks into smaller, more manageable steps, enhancing an agent's ability to plan and execute effectively. Techniques like Chain of Thought (CoT) prompt models to think step by step, allowing them to tackle complex tasks systematically. Additionally, the Tree of Thoughts method expands this by exploring multiple reasoning possibilities at each step in a structured manner.\""
+       "'Task Decomposition is the process of breaking down a complex task into smaller, manageable steps to simplify execution and enhance understanding. It can be achieved using various prompting techniques, like Chain of Thought, to facilitate reasoning and planning. This method enables agents to approach difficult problems systematically by generating sub-goals or steps.'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,17 +437,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -qU langchain-community beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "id": "MbuUZ2rqwn45"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 3/3 [00:00<00:00, 39.79it/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "import bs4\n",
+    "from langchain_community.document_loaders import WebBaseLoader \n",
+    "\n",
     "urls = [\n",
     "    \"https://lilianweng.github.io/posts/2023-06-23-agent/\",\n",
     "    \"https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/\",\n",
     "    \"https://lilianweng.github.io/posts/2023-10-25-adv-attack-llm/\",\n",
-    "]"
+    "]\n",
+    "\n",
+    "loader = WebBaseLoader(\n",
+    "    web_paths=urls,\n",
+    "    # bs_kwargs=dict(\n",
+    "    #     parse_only=bs4.SoupStrainer(\n",
+    "    #         class_=(\"post-content\", \"post-title\", \"post-header\")\n",
+    "    #     )\n",
+    "    # ),\n",
+    ")\n",
+    "\n",
+    "docs = []\n",
+    "async for doc in loader.alazy_load():\n",
+    "    docs.append(doc)\n"
    ]
   },
   {
@@ -461,6 +503,53 @@
     "**2. 불러온 본문을 Split (Chunking) : recursive text splitter 활용 (아래 링크 참고)**\n",
     "\n",
     "https://python.langchain.com/v0.2/docs/how_to/recursive_text_splitter/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -qU langchain-text-splitters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "478\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    # Set a really small chunk size, just to show.\n",
+    "    chunk_size=600,\n",
+    "    chunk_overlap=200,\n",
+    "    length_function=len,\n",
+    ")\n",
+    "chunks = text_splitter.split_documents(docs)\n",
+    "print(len(chunks))"
    ]
   },
   {
@@ -483,6 +572,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -qU langchain-openai \"langchain-chroma>=0.1.2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
+    "  os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"Enter API key for OpenAI: \")\n",
+    "\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
+    "\n",
+    "vectorstore = Chroma.from_documents(documents=chunks, embedding=OpenAIEmbeddings())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "f80hfgluq43Q"
@@ -494,6 +621,56 @@
     "https://python.langchain.com/v0.2/docs/how_to/vectorstore_retriever/\n",
     "\n",
     "https://api.python.langchain.com/en/latest/vectorstores/langchain_core.vectorstores.VectorStore.html#langchain_core.vectorstores.VectorStore.as_retriever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Task decomposition is the process of breaking down a complicated task into smaller, manageable steps. This can be achieved using large language models (LLMs) through simple prompts, task-specific instructions, or human inputs. Techniques like Chain of Thought and Tree of Thoughts aid in systematically approaching and solving complex problems.'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "retriever = vectorstore.as_retriever()\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Types of adversarial attacks include Token Manipulation, Gradient-based Attacks, Jailbreak Prompting, Humans in the Loop Red-teaming, and Model Red-teaming. Each approach aims to trigger undesirable outputs from models. These attacks are studied primarily within the context of large language models (LLMs).'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rag_chain.invoke(\"What are types of Types of Adversarial Attacks?\")"
    ]
   },
   {
