--- a/day02/rag_langchain.ipynb
+++ b/day02/rag_langchain.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -548,8 +548,8 @@
     "    chunk_overlap=200,\n",
     "    length_function=len,\n",
     ")\n",
-    "chunks = text_splitter.split_documents(docs)\n",
-    "print(len(chunks))"
+    "references = text_splitter.split_documents(docs)\n",
+    "print(len(references))"
    ]
   },
   {
@@ -606,7 +606,7 @@
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_chroma import Chroma\n",
     "\n",
-    "vectorstore = Chroma.from_documents(documents=chunks, embedding=OpenAIEmbeddings())\n"
+    "vectorstore = Chroma.from_documents(documents=references, embedding=OpenAIEmbeddings())\n"
    ]
   },
   {
@@ -694,62 +694,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "cFsJnLmn44p0",
-    "outputId": "12f8b77f-ef1c-44dd-d350-91e8306fbfc1"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {},
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain import hub\n",
-    "\n",
-    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
-    "prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "I_YaPYr25g_G",
-    "outputId": "dee52114-194a-4b9c-ec1d-2d7527ca8788"
-   },
-   "outputs": [
-    {
-     "data": {},
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "example_messages = prompt.invoke(\n",
-    "    {\"context\": \"filler context\", \"question\": \"filler question\"}\n",
-    ").to_messages()\n",
-    "\n",
-    "example_messages"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "bnDksZA748kC"
@@ -762,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -772,8 +716,12 @@
    },
    "outputs": [
     {
-     "data": {},
-     "execution_count": 11,
+     "data": {
+      "text/plain": [
+       "{'joke': \"Why don't scientists trust atoms? Because they make up everything!\"}"
+      ]
+     },
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,6 +755,143 @@
     "```\n",
     "{'response': \"Sure! Here's a joke for you: Why couldn't the bicycle stand up by itself? Because it was two tired!\"}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'lc': 1, 'type': 'constructor', 'id': ['langchain', 'schema', 'document', 'Document'], 'kwargs': {'id': '9ce1af6e-0115-4d37-8f86-de90a8aac9a7', 'metadata': {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview\\nIn a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:\\n\\nPlanning\\n\\nSubgoal and decomposition: The agent breaks down large tasks into smaller, manageable subgoals, enabling efficient handling of complex tasks.\\nReflection and refinement: The agent can do self-criticism and self-reflection over past actions, learn from mistakes and refine them for future steps, thereby improving the quality of final results.\\n\\n\\nMemory\\n\\nShort-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\\nLong-term memory: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\n\\nTool use\\n\\nThe agent learns to call external APIs for extra information that is missing from the model weights (often hard to change after pre-training), including current information, code execution capability, access to proprietary information sources and more.\\n\\n\\n\\n\\nFig. 1. Overview of a LLM-powered autonomous agent system.\\nComponent One: Planning\\nA complicated task usually involves many steps. An agent needs to know what they are and plan ahead.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}, 'page_content': 'Mario game, such as level design, characters, and gameplay mechanics?\"', 'type': 'Document'}}, {'lc': 1, 'type': 'constructor', 'id': ['langchain', 'schema', 'document', 'Document'], 'kwargs': {'id': 'ad273295-ede1-458a-b90c-66bf7cdc1349', 'metadata': {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview\\nIn a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:\\n\\nPlanning\\n\\nSubgoal and decomposition: The agent breaks down large tasks into smaller, manageable subgoals, enabling efficient handling of complex tasks.\\nReflection and refinement: The agent can do self-criticism and self-reflection over past actions, learn from mistakes and refine them for future steps, thereby improving the quality of final results.\\n\\n\\nMemory\\n\\nShort-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\\nLong-term memory: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\n\\nTool use\\n\\nThe agent learns to call external APIs for extra information that is missing from the model weights (often hard to change after pre-training), including current information, code execution capability, access to proprietary information sources and more.\\n\\n\\n\\n\\nFig. 1. Overview of a LLM-powered autonomous agent system.\\nComponent One: Planning\\nA complicated task usually involves many steps. An agent needs to know what they are and plan ahead.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}, 'page_content': 'math calculator, currency converter, weather API).', 'type': 'Document'}}, {'lc': 1, 'type': 'constructor', 'id': ['langchain', 'schema', 'document', 'Document'], 'kwargs': {'id': 'd51376b9-1c67-4581-b52d-e4780cb117b6', 'metadata': {'description': 'The use of large language models in the real world has strongly accelerated by the launch of ChatGPT. We (including my team at OpenAI, shoutout to them) have invested a lot of effort to build default safe behavior into the model during the alignment process (e.g. via RLHF). However, adversarial attacks or jailbreak prompts could potentially trigger the model to output something undesired.\\nA large body of ground work on adversarial attacks is on images, and differently it operates in the continuous, high-dimensional space. Attacks for discrete data like text have been considered to be a lot more challenging, due to lack of direct gradient signals. My past post on Controllable Text Generation is quite relevant to this topic, as attacking LLMs is essentially to control the model to output a certain type of (unsafe) content.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-10-25-adv-attack-llm/', 'title': \"Adversarial Attacks on LLMs | Lil'Log\"}, 'page_content': 'The use of large language models in the real world has strongly accelerated by the launch of ChatGPT. We (including my team at OpenAI, shoutout to them) have invested a lot of effort to build default safe behavior into the model during the alignment process (e.g. via RLHF). However, adversarial attacks or jailbreak prompts could potentially trigger the model to output something undesired.', 'type': 'Document'}}, {'lc': 1, 'type': 'constructor', 'id': ['langchain', 'schema', 'document', 'Document'], 'kwargs': {'id': '06a8627f-3bd4-423e-8c10-12a35bc40f5f', 'metadata': {'description': 'The use of large language models in the real world has strongly accelerated by the launch of ChatGPT. We (including my team at OpenAI, shoutout to them) have invested a lot of effort to build default safe behavior into the model during the alignment process (e.g. via RLHF). However, adversarial attacks or jailbreak prompts could potentially trigger the model to output something undesired.\\nA large body of ground work on adversarial attacks is on images, and differently it operates in the continuous, high-dimensional space. Attacks for discrete data like text have been considered to be a lot more challenging, due to lack of direct gradient signals. My past post on Controllable Text Generation is quite relevant to this topic, as attacking LLMs is essentially to control the model to output a certain type of (unsafe) content.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-10-25-adv-attack-llm/', 'title': \"Adversarial Attacks on LLMs | Lil'Log\"}, 'page_content': '[19] Xie et al. “Defending ChatGPT against Jailbreak Attack via Self-Reminder.” Research Square (2023)\\n[20] Jones et al. “Automatically Auditing Large Language Models via Discrete Optimization.” arXiv preprint arXiv:2303.04381 (2023)\\n[21] Greshake et al. “Compromising Real-World LLM-Integrated Applications with Indirect Prompt Injection.” arXiv preprint arXiv:2302.12173(2023)', 'type': 'Document'}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "retriever = vectorstore.as_retriever()\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "\n",
+    "query = \"What is Kakao doing these days?\"\n",
+    "references = await retriever.aget_relevant_documents(query)\n",
+    "\n",
+    "print([chunk.to_json() for chunk in references])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_relevancy(result: dict):\n",
+    "    return {\"relevance\": 'yes' if result[\"value\"] == 'Y' else 'no' }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OpenAI evaluator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'reasoning': 'To assess whether the submission meets the given criterion of relevance, specifically if it refers to a real quote from the reference text, I will proceed as follows:\\n\\n1. **Understanding the Submission**: The submission asks, \"What is Kakao doing these days?\" This suggests a query about the current activities or operations of the company Kakao.\\n\\n2. **Analyzing the Criterion**: The criterion states that I need to determine if the submission refers to a real quote from the reference text. In other words, I need to find if the submission provides information or insights that are found in the reference documents.\\n\\n3. **Reviewing the Reference Text**: The provided reference text discusses various aspects of large language models (LLMs) and their applications, with a focus on building autonomous agents. The topics covered include planning, memory, tool use, and adversarial attacks on LLMs, but there is no mention of Kakao or its recent activities.\\n\\n4. **Identifying Connections**: Since the submission questions the current activities of Kakao and the reference text discusses LLM technology without mentioning Kakao or its initiatives, there isn’t a relevant connection. The submission does not quote or refer to any part of the reference text.\\n\\n5. **Conclusion**: Given that the submission does not relate to anything contained in the reference documents and merely poses a question about a specific company with no underpinning in the provided context, it does not meet the criteria of relevance.\\n\\nBased on this analysis, the answer to the assessment is:\\n\\nN', 'value': 'N', 'score': 0}\n",
+      "{'relevance': 'no'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.output_parsers import JsonOutputParser\n",
+    "from langchain.evaluation import load_evaluator\n",
+    "\n",
+    "def format_relevancy(result):\n",
+    "    return {\"relevance\": 'yes' if result[\"value\"] == 'Y' else 'no' }\n",
+    "\n",
+    "parser = JsonOutputParser()\n",
+    "evaluator = load_evaluator(\"labeled_criteria\", criteria=\"relevance\", llm=llm)\n",
+    "results = evaluator.evaluate_strings(\n",
+    "    input=query,\n",
+    "    prediction=\"\",  # Can leave blank if just checking chunk relevance\n",
+    "    reference=references\n",
+    ")\n",
+    "\n",
+    "print(format_relevancy( results))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ragas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install ragas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, metadata={'lc_hub_owner': 'rlm', 'lc_hub_repo': 'rag-prompt', 'lc_hub_commit_hash': '50442af133e61576e74536c6556cefe1fac147cad032f4377b60c436e6cdcb6e'}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"), additional_kwargs={})])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from langchain import hub\n",
+    "\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: filler question \\nContext: filler context \\nAnswer:\", additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "example_messages = prompt.invoke(\n",
+    "    {\"context\": \"filler context\", \"question\": \"filler question\"}\n",
+    ").to_messages()\n",
+    "\n",
+    "example_messages"
    ]
   },
   {
@@ -871,8 +956,8 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "for chunk in rag_chain.stream(\"What is Task Decomposition?\"):\n",
-    "    print(chunk, end=\"\", flush=True)"
+    "for references in rag_chain.stream(\"What is Task Decomposition?\"):\n",
+    "    print(references, end=\"\", flush=True)"
    ]
   },
   {
